--- a/src/css/index.css
+++ b/src/css/index.css
@@ -396,6 +396,11 @@ button:focus {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
+li:focus {
+    outline: 2px solid #7AACFE !important; /* for non-webkit browsers */
+    outline: 5px auto -webkit-focus-ring-color !important;
+}
+
 fieldset {
   margin: 0;
   padding: 0;
